# llama-cookbook

./: .gitignore  DemoFile  README.md  calculator.py
3p-integrations/: README.md
end-to-end-use-cases/powerpoint-to-voiceover-transcript/: .env.example  .gitignore  README.md  config.yaml  knowledge_enhanced_workflow.ipynb  narrative_continuity_workflow.ipynb  pptx_to_vo_workflow.ipynb  pyproject.toml
end-to-end-use-cases/powerpoint-to-voiceover-transcript/knowledge_base/: llama diet.md  llamas.md
end-to-end-use-cases/powerpoint-to-voiceover-transcript/knowledge_base/.faiss_cache/: chunks.pkl  faiss.index  metadata.json
end-to-end-use-cases/powerpoint-to-voiceover-transcript/output/: All About Llamas_notes.csv  knowledge_base_stats.json  knowledge_enhanced_narrative_transcripts.csv  knowledge_enhanced_narrative_transcripts.json  knowledge_enhanced_narrative_transcripts_clean.csv  narrative_transcripts.csv  narrative_transcripts.json  narrative_transcripts_clean.csv
end-to-end-use-cases/powerpoint-to-voiceover-transcript/output/narrative_context/: narrative_summary.json  slide_contexts.json
end-to-end-use-cases/powerpoint-to-voiceover-transcript/src/: __init__.py
end-to-end-use-cases/powerpoint-to-voiceover-transcript/src/config/: __init__.py  settings.py
end-to-end-use-cases/powerpoint-to-voiceover-transcript/src/core/: __init__.py  file_utils.py  groq_client.py  image_processing.py  llama_client.py  pptx_processor.py
end-to-end-use-cases/powerpoint-to-voiceover-transcript/src/knowledge/: __init__.py  context_manager.py  faiss_knowledge.py
(+223 files in other folders)
